--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "axios": "^1.3.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
